--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/rschmukler/human-interval/issues"
   },
   "devDependencies": {
-    "expect.js": "~0.2.0"
+    "expect.js": "~0.3.1",
+    "mocha": "~3.4.2"
   }
 }
